A Block of Update fell! - Added support for multiplying dropped items when falling blocks are destroyed by non-solid blocks (e.g. torches, signs, rails etc.) - Consistency changes across the plugin, like ItemMultiplier now talking Location instead of Block
(And possibly more edge cases to patch in the future? Time will tell!)